--- a/demos/Simple Slideshow/index.html
+++ b/demos/Simple Slideshow/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="../../infinitySlider.js"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js" crossorigin="anonymous"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js" crossorigin="anonymous"></script>
+    <script type="application/javascript"  src="../../infinitySlider.js"></script>
     <title>Document</title>
 </head>
 
