--- a/demos/Slideshow Autoplay/index.html
+++ b/demos/Slideshow Autoplay/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="../../infinitySlider.js"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js" crossorigin="anonymous"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js" crossorigin="anonymous"></script>
+    <script type="application/javascript"  src="../../infinitySlider.js"></script>
     <title>Document</title>
 </head>
 
@@ -38,7 +40,7 @@
             myslider = new infinitySlider({
                 enableSlideLoop: true, /*enables slide looping*/
                 autoplay: true, /*enables autoplay*/
-                autoplayTime: 4, /*switches slide every 4 seconds*/
+                autoplayTime: 4000, /*switches slide every 4 seconds*/
             });
         });
 
