--- a/demos/Slideshow with miniature selector/index.html
+++ b/demos/Slideshow with miniature selector/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="../../infinitySlider.js"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js" crossorigin="anonymous"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js" crossorigin="anonymous"></script>
+    <script type="application/javascript"  src="../../infinitySlider.js"></script>
     <title>Document</title>
 </head>
 
@@ -23,11 +25,11 @@
         </button>
     </div>
     <div class="miniatureslider">
-        <div class="minislide bg1" onclick="myminislider.activateSlide(this);"></div>
-        <div class="minislide bg2" onclick="myminislider.activateSlide(this);"></div>
-        <div class="minislide bg3" onclick="myminislider.activateSlide(this);"></div>
-        <div class="minislide bg4" onclick="myminislider.activateSlide(this);"></div>
-        <div class="minislide bg5" onclick="myminislider.activateSlide(this);"></div>
+        <div class="minislide bg1" onclick="myminislider.activateSlide(this);myslider.goTo(myminislider.getSlideIndex(this));"></div>
+        <div class="minislide bg2" onclick="myminislider.activateSlide(this);myslider.goTo(myminislider.getSlideIndex(this));"></div>
+        <div class="minislide bg3" onclick="myminislider.activateSlide(this);myslider.goTo(myminislider.getSlideIndex(this));"></div>
+        <div class="minislide bg4" onclick="myminislider.activateSlide(this);myslider.goTo(myminislider.getSlideIndex(this));"></div>
+        <div class="minislide bg5" onclick="myminislider.activateSlide(this);myslider.goTo(myminislider.getSlideIndex(this));"></div>
     </div>
     <script>
         var myslider = null;
@@ -44,10 +46,7 @@
                 transformationOffset: 2,
                 enableSlideLoop: true, /*enables slide looping*/
                 autoplay: false, /*enables autoplay*/
-                autoplayTime: 4, /*switches slide every 4 seconds*/
-                onSlideChange: function(index){
-                    myslider.goTo(index);
-                }, /*runs the Slide change callback to sync sliders*/
+                autoplayTime: 4000, /*switches slide every 4 seconds*/
             });
         });
     </script>
