improvements and fixes to core code
-fixed normalize Index function bug on negative indexes
-redesign of the rendering calculations algorithm (smoother and less jerky). This redesign also improved with multiple jumps in the middle of a transition
-removed zIndex ordering of slides (not needed)
-dot controls event are now managed by the library (no need to declare it on html or additional script)
-updated examples
-added function to push new slides dynamically

--- a/demos/Simple Slideshow/index.html
+++ b/demos/Simple Slideshow/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js" crossorigin="anonymous"></script>
-    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js" crossorigin="anonymous"></script>
-    <script type="application/javascript"  src="../../infinitySlider.js"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js"
+        crossorigin="anonymous"></script>
+    <script type="application/javascript"
+        src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js"
+        crossorigin="anonymous"></script>
+    <script type="application/javascript" src="../../infinitySlider.js"></script>
     <title>Document</title>
 </head>
 
 <body>
     <div class="slider">
         <div class="slide bg1"></div>
-        <input type="button" class="slidedot" onclick="myslider.activateSlide(this);">
+        <input type="button" class="slidedot">
 
         <div class="slide bg2"></div>
-        <input type="button" class="slidedot" onclick="myslider.activateSlide(this);">
+        <input type="button" class="slidedot">
 
         <div class="slide bg3"></div>
-        <input type="button" class="slidedot" onclick="myslider.activateSlide(this);">
+        <input type="button" class="slidedot">
 
         <div class="slide bg4"></div>
-        <input type="button" class="slidedot" onclick="myslider.activateSlide(this);">
+        <input type="button" class="slidedot">
 
         <div class="slide bg5"></div>
-        <input type="button" class="slidedot" onclick="myslider.activateSlide(this);">
+        <input type="button" class="slidedot">
 
         <button class="slider-control slider-prev" onclick="myslider.prev();">
             <div></div>
