--- a/demos/Slideshow with miniature selector/index.html
+++ b/demos/Slideshow with miniature selector/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js" crossorigin="anonymous"></script>
-    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js" crossorigin="anonymous"></script>
-    <script type="application/javascript"  src="../../infinitySlider.js"></script>
+    <script type="application/javascript" src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.js"
+        crossorigin="anonymous"></script>
+    <script type="application/javascript"
+        src="https://cdn.jsdelivr.net/gh/Paciente8159/transitionJS/transition.easings.js"
+        crossorigin="anonymous"></script>
+    <script type="application/javascript" src="../../infinitySlider.js"></script>
     <title>Document</title>
 </head>
 
@@ -43,12 +46,12 @@
             myminislider = new infinitySlider({
                 sliderSelector: '.miniatureslider',
                 slideSelector: '.minislide',
-                transformationOffset: 2,
+                transformationOffset: -2,
                 enableSlideLoop: true, /*enables slide looping*/
                 autoplay: false, /*enables autoplay*/
                 autoplayTime: 4000, /*switches slide every 4 seconds*/
-                onBeforeSlideChange: function(index, motion){
-                    myslider.goTo(index + motion);
+                onBeforeSlideChange: function (index, motion) {
+                    myslider.move(motion);
                 }
             });
         });
